src/test/deca/syntax/invalid/bad_op_placement.deca

// Description :
// Opérateur mal placé '+ *'
//
// Resultats :
// Erreur syntaxique
// Regle : mult_expr : mult_expr ('*'|'/'|'%') unary_expr

{
    x = 1 + * 2 ;
}